# production-rag

./: .gitignore  LICENSE  README.md  pyproject.toml
evaluation/: __init__.py  evaluator.py  metrics.py
examples/: basic_rag.py  evaluation_demo.py
rag/: __init__.py  core.py
rag/query/: __init__.py  analyzer.py  optimizer.py
rag/retrieval/: __init__.py  base.py  bm25_retriever.py  hybrid.py  reranker.py  semantic.py
